Bug fixed: Aligned the items in top header to center

--- a/public/styles/Banner.css
+++ b/public/styles/Banner.css
@@ -12,6 +12,7 @@
 
   #headerDivider{
     display: flex;
+    align-items: center;
     justify-content: space-between;
   }
 
